[package]
name = "executor"
version = "0.1.0"
edition = "2021"
authors = ["Keijack Wu"]
description = "A threadpool executor. "
readme = "README.md"
homepage = "https://github.com/keijack/rust-executor"
repository = "https://github.com/keijack/rust-executor"
license-file = "LICENSE"
keywords = ["threadpool", "thread", "pool", "threading", "parallelism"]

[dependencies]
log = "*"

[dev-dependencies]
simple_logger = "4.*"