[package]
name = "threadpool-executor"
version = "0.2.2"
edition = "2021"
authors = ["Keijack Wu"]
description = "A threadpool executor. "
readme = "README.md"
homepage = "https://github.com/keijack/rust-executor"
repository = "https://github.com/keijack/rust-executor"
license = "Apache-2.0"
keywords = ["threadpool", "thread", "pool", "threading", "parallelism"]

[dependencies]
crossbeam-channel = "^0.5"
log = "^0.4"

[dev-dependencies]
simple_logger = "^4"